# vulcan

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  ROADMAP.md  SKILL.md  install.py  mcp_server.py  minigraf_server.rs  minigraf_tool.py  pyproject.toml  report_issue.py  requirements.txt  skill.json
.github/workflows/: pylint.yml  pytest.yml
docs/superpowers/plans/: 2026-04-08-issue-60-lazy-graph-path.md  2026-04-15-marketplace-publishing.md
docs/superpowers/specs/: 2026-04-15-marketplace-publishing-design.md
evals/: benchmark.md  evals.json
hooks/: codex.toml  finalize_hook.py  hermes.yaml  openclaw.json  opencode.json  prepare_hook.py
prompts/: fewshots.txt  system.txt
tests/: conftest.py  test_advanced.py  test_harness.py  test_install.py  test_mcp_server.py  test_minigraf_tool.py  test_vulcan.py
tools/: memory_finalize_turn.json  memory_prepare_turn.json  query.json  report_issue.json  retract.json  transact.json
